<?xml version="1.0"?>
<package format="3">
    <name>accessory_client</name>
    <version>0.0.0</version>
    <description>The accessory_client package</description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclpy</build_depend>
    <build_depend>accessory_msgs</build_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>accessory_msgs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
