<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>z8015_slambox</name>
    <version>0.0.1</version>
    <description>
        ROS 2 launch scripts for slambox
    </description>
    <maintainer email="zaxrok@gmail.com">Bcchoi</maintainer>
    <license>MIT</license>

    <author email="zaxrok@gmail.com">Bcchoi</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>nav2_bringup</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
        <exec_depend>nav2_bringup</exec_depend>
        <exec_depend>slam_toolbox</exec_depend>
    </export>
</package>
